--- a/Project_SnakeAndLadder/Properties/Resources.resx
+++ b/Project_SnakeAndLadder/Properties/Resources.resx
@@ -163,6 +163,9 @@
   <data name="vs_playerButton_beforeClicked" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\vs_playerButton-beforeClicked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="wallpaper" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\wallpaper.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="whiteHole" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\whiteHole.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
