--- a/Project_SnakeAndLadder/Properties/Resources.resx
+++ b/Project_SnakeAndLadder/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="blackHole" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\blackHole.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="dice_06" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dice-06.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="exitButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\exitButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
